git deployment test

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Meshuka.github.io/ToDo-App-React",
+  "homepage": "http://Meshuka.github.io/ToDoApp",
   "name": "todoapp",
   "version": "0.1.0",
   "private": true,
