changes in homepage name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Meshuka.github.io/ToDoApp",
+  "homepage": "http://Meshuka.github.io/todoapp",
   "name": "todoapp",
   "version": "0.1.0",
   "private": true,
@@ -10,9 +10,9 @@
     "react-scripts": "1.1.5"
   },
   "scripts": {
+    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
