--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Meshuka.github.io/todoapp",
+  "homepage": "http://Meshuka.github.io/TodoApp",
   "name": "todoapp",
   "version": "0.1.0",
   "private": true,
